Swagger into Profile EPs
